--- a/contact_us.html
+++ b/contact_us.html
@@ -38,7 +38,9 @@
 	<!-- header 
    ================================================== -->
    <header> 
-
+    <div class="header-logo">
+	      <a href="index.html"><img src="images/loghi/frullatore.png" width="15%" height="15%">Infinity</a>
+	   </div> 
    	<div class="header-logo">
 	      <a href="index.html">Infinity</a>
 	   </div> 
