--- a/about_us.html
+++ b/about_us.html
@@ -83,7 +83,7 @@
 
    <!-- home
    ================================================== -->
-   <section id="home">
+   <section id="home" style="background-image:url('images/background/selphie.jpg')">
 
    	<div class="overlay"></div>
 
