--- a/index.html
+++ b/index.html
@@ -273,12 +273,12 @@
 	        		</div> <!-- end folio-item -->
 
 	        		<div class="brick folio-item">
-	               <div class="item-wrap animate-this" data-src="images/portfolio/gallery/g-architecture.jpg" data-sub-html="#03" >   	
+	               <div class="item-wrap animate-this" data-src="images/background/italy2018.jpg" data-sub-html="#03" >   	
 	                  <a href="#" class="overlay">
-	                  	<img src="images/portfolio/architecture.jpg" alt="Explore">	                     
+	                  	<img src="images/background/italy2018.jpg" alt="Explore">	                     
 	                     <div class="item-text">	                     		     					    
 		     					   <span class="folio-types">
-		     					      EBEC Italy
+		     					      EBEC Italy 2018
 		     					   </span>
 		     					   <h3 class="folio-title">Città 2</h3>
 		     					</div>                                        
@@ -287,7 +287,7 @@
 	               </div> <!-- end item-wrap -->	
 
 	               <div id="03" class='hide'>
-							<h4>EBEC Italy citta 2</h4>
+							<h4>EBEC Italy 2018 citta 2</h4>
 							</div>               
 	        		</div> <!-- end folio-item -->
 
