--- a/about_us.html
+++ b/about_us.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>EBEC Italy Messina 2020</title>
+	<title>EBEC Italy Messina 2021</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -28,8 +28,8 @@
 
    <!-- favicons
 	================================================== -->
-	<link rel="shortcut icon" href="images/loghi/frullatore.png" type="image/x-icon">
-	<link rel="icon" href="images/loghi/frullatore.png" type="image/x-icon">
+	<link rel="shortcut icon" href="images/loghi/ebec_icona.png" type="image/x-icon">
+	<link rel="icon" href="images/loghi/ebec_icona.png" type="image/x-icon">
 
 </head>
 
@@ -40,7 +40,7 @@
    <header> 
 
    	<div class="header-logo">
-	      <a href="index.html"><img src="images/loghi/frullatore.png" width="15%" height="15%">Infinity</a>
+	      <a href="index.html"><img src="images/loghi/ebec_icona.png" width="10%" height="10%">EBEC</a>
 	   </div> 
 
 		<a id="header-menu-trigger" href="#0">
@@ -52,15 +52,15 @@
 
 			<a href="#0" class="close-button" title="close"><span>Close</span></a>	
 
-	   	<h3>EBEC Italy Messina 2020</h3>  
+	   	<h3>EBEC Italy<br>Messina 2021</h3>  
 
 			<ul class="nav-list">
-				<li class="current"><a class="smoothscroll" href="index.html" title="">Home</a></li>
-				<li><a class="smoothscroll" href="./about_us.html" title="">About us</a></li>
-				<li><a class="smoothscroll" href="./partners.html" title="">Partners</a></li>
-				<li><a class="smoothscroll" href="./team.html" title="">Team</a></li>
-				<li><a class="smoothscroll" href="./news.html" title="">News</a></li>
-				<li><a class="smoothscroll" href="./contact_us.html" title="">Contact us</a></li>				
+				<li><a href="./index.html" target="_self">Home</a></li>
+				<li class="current"><a class="smoothscroll" href="#home" title="">About us</a></li>
+				<li><a href="./partners.html" target="_self">Partners</a></li>
+				<li><a href="./team.html" target="_self">Team</a></li>
+				<li><a href="./news.html" target="_self">News</a></li>
+				<li><a href="./contact_us.html" target="_self">Contact us</a></li>				
 			</ul>	
 			
 
@@ -258,7 +258,7 @@
    		<div class="row">
 
 			<div class="col-five tab-full footer-about">
-				<a href="" target="_blank"><img src="images/loghi/EBEC.png" style="height:137px; width:350px"></a>
+				<a href="https://ebec.best.eu.org/" target="_blank"><img src="images/loghi/EBEC.png" style="height:137px; width:350px"></a>
 				<ul style="text-align: center">
 					<li>
 						<a href="" target="_blank"><i class="fa fa-facebook-square"></i> Facebook</a>
@@ -278,7 +278,7 @@
 
 
 			<div class="col-four tab-full footer-subscribe end">
-				<a href="" target="_blank"><img src="images/loghi/BEST.png" style="height:137px; width:350px"></a>
+				<a href="https://www.best.eu.org/index.jsp" target="_blank"><img src="images/loghi/BEST.png" style="height:137px; width:350px"></a>
 				<ul style="text-align: center">
 					<li>
 						<a href="" target="_blank"><i class="fa fa-facebook-square"></i> Facebook</a>
@@ -299,7 +299,7 @@
       	<div class="row">
       		<div class="col-twelve">
 				<div class="copyright">
-					<span>© Copyright 2020 BEST Italy</span>
+					<span>© Copyright 2021 BEST Italy</span>
 					<span>Design by Gabriele Greco <a href="https://www.linkedin.com/in/gabriele-greco-2228b8174/" target="_blank"><i class="fa fa-linkedin-square"></i></a></span>
 				</div>
 	      	</div>
