--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>EBEC Italy Messina 2020</title>
+	<title>EBEC Italy Messina 2021</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -28,8 +28,8 @@
 
    <!-- favicons
 	================================================== -->
-	<link rel="shortcut icon" href="images/loghi/frullatore.png" type="image/x-icon">
-	<link rel="icon" href="images/loghi/frullatore.png" type="image/x-icon">
+	<link rel="shortcut icon" href="images/loghi/ebec_icona.png" type="image/x-icon">
+	<link rel="icon" href="images/loghi/ebec_icona.png" type="image/x-icon">
 
 </head>
 
@@ -40,7 +40,7 @@
    <header> 
 
    	<div class="header-logo">
-	      <a href="index.html"><img src="images/loghi/frullatore.png" width="15%" height="15%">Infinity</a>
+	      <a href="index.html"><img src="images/loghi/ebec_icona.png" width="10%" height="10%">EBEC</a>
 	   </div> 
 
 		<a id="header-menu-trigger" href="#0">
@@ -52,15 +52,15 @@
 
 			<a href="#0" class="close-button" title="close"><span>Close</span></a>	
 
-	   	<h3>EBEC Italy Messina 2020</h3>  
+	   	<h3>EBEC Italy<br>Messina 2021</h3>  
 
 			<ul class="nav-list">
-				<li class="current"><a class="smoothscroll" href="index.html" title="">Home</a></li>
-				<li><a class="smoothscroll" href="about_us.html" title="">About us</a></li>
-				<li><a class="smoothscroll" href="partners.html" title="">Partners</a></li>
-				<li><a class="smoothscroll" href="team.html" title="">Team</a></li>
-				<li><a class="smoothscroll" href="news.html" title="">News</a></li>
-				<li><a class="smoothscroll" href="contact_us.html" title="">Contact us</a></li>						
+				<li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
+				<li><a href="./about_us.html" target="_self">About us</a></li>
+				<li><a href="./partners.html" target="_self">Partners</a></li>
+				<li><a href="./team.html" target="_self">Team</a></li>
+				<li><a href="./news.html" target="_self">News</a></li>
+				<li><a href="./contact_us.html" target="_self">Contact us</a></li>						
 			</ul>			
 
 			<ul class="header-social-list">
@@ -142,16 +142,15 @@
 				<div class="intro">
 					<div class="row narrow section-intro animate-this fadeInUp animated">
 						<div class="col-full">
-							<h1 style="color: #299c87; font-family: lovelo-line-bold">EBEC Italy Messina 2020</h1>
+							<h1 style="color: #299c87; font-family: tahoma">EBEC Italy Messina 2021</h1>
 							<p style="font-family: montserrat-bold; color: #053b52; line-height: 2.5rem; font-size: 1.8rem">DESIGN THE FUTURE. TODAY.</p>
 						 </div><!-- end col-full -->
 					</div> <!-- end row -->
 	   			<p style="color: #053b52; line-height: 2.5rem; font-size: 1.8rem">
-					The Final Round of EBEC is the most prestigious round of the EBEC Pyramid,
-					gathering the best 120 students who have won their Local Round, advanced to their
-					National-Regional Round (NRR) and by winning it gained the access to the diamond head of EBEC: the Final Round.<br>
-					The finalists are highly talented and skilled students immersed in a dynamic, multicultural
-					and innovative environment where students, companies and universities share and gain knowledge about the world of tech.
+                 The National Round of EBEC Italy is one of the most challenging rounds of the EBEC Pyramid, gathering
+				 the best 48 students who have won their Local Round in Turin, Milan, Naples, Messina, Roma Sapienza and Rome Tor Vergata.<br><br>
+				 The finalists are highly talented and skilled students immersed in a dynamic, multicultural and innovative environment where students,
+				 companies and universities share and gain knowledge about the world of tech.
 				</p>
 				</div>				
 
@@ -239,10 +238,9 @@
 
    		<div class="row narrow section-intro with-bottom-sep animate-this">
 	   		<div class="col-twelve">
-	   			<h3>Showcase</h3>
-		   		<h1>See Our Featured Projects.</h1>  			
+	   			<h3>Gallery</h3>
+		   		<h1>EBEC Italy - Past Editions</h1>  			
 		   		
-		   		<p class="lead">Lorem ipsum Dolor adipisicing nostrud et aute Excepteur amet commodo ea dolore irure esse Duis nulla sint fugiat cillum ullamco proident aliquip quis qui voluptate dolore veniam Ut laborum non est in officia.</p>	   			
 	   		</div>   		
 	   	</div> <!-- end row section-intro -->   		
 
@@ -384,7 +382,7 @@
    		<div class="row">
 
 			<div class="col-five tab-full footer-about">
-				<a href="" target="_blank"><img src="images/loghi/EBEC.png" style="height:137px; width:350px"></a>
+				<a href="https://ebec.best.eu.org/" target="_blank"><img src="images/loghi/EBEC.png" style="height:137px; width:350px"></a>
 				<ul style="text-align: center">
 					<li>
 						<a href="" target="_blank"><i class="fa fa-facebook-square"></i> Facebook</a>
@@ -404,7 +402,7 @@
 
 
 			<div class="col-four tab-full footer-subscribe end">
-				<a href="" target="_blank"><img src="images/loghi/BEST.png" style="height:137px; width:350px"></a>
+				<a href="https://www.best.eu.org/index.jsp" target="_blank"><img src="images/loghi/BEST.png" style="height:137px; width:350px"></a>
 				<ul style="text-align: center">
 					<li>
 						<a href="" target="_blank"><i class="fa fa-facebook-square"></i> Facebook</a>
@@ -425,7 +423,7 @@
       	<div class="row">
       		<div class="col-twelve">
 				<div class="copyright">
-					<span>© Copyright 2020 BEST Italy</span>
+					<span>© Copyright 2021 BEST Italy</span>
 					<span>Design by Gabriele Greco <a href="https://www.linkedin.com/in/gabriele-greco-2228b8174/" target="_blank"><i class="fa fa-linkedin-square"></i></a></span>
 				</div>
 	      	</div>
