--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 				<div class="intro">
 					<div class="row narrow section-intro animate-this fadeInUp animated">
 						<div class="col-full">
-							<h1 style="color: #299c87; font-family: tahoma">EBEC Italy Messina 2021</h1>
+							<h1 style="color: #27C274; font-family: tahoma">EBEC Italy Messina 2021</h1>
 							<p style="font-family: montserrat-bold; color: #053b52; line-height: 2.5rem; font-size: 1.8rem">DESIGN THE FUTURE. TODAY.</p>
 						 </div><!-- end col-full -->
 					</div> <!-- end row -->
