--- a/news.html
+++ b/news.html
@@ -150,7 +150,7 @@
    			<div class="about-profile-bg"></div>
 
 				<div class="intro">
-					<h1 class="animate-this" style="color: #299c87; font-family: lovelo-line-bold, sans-serif; font-size: 5rem">Articles</h1>
+					<h1 class="animate-this" style="color: #27C274; font-family: lovelo-line-bold, sans-serif; font-size: 5rem">Articles</h1>
 	   			<p class="lead animate-this" style="color: #299c87"></p>
 				</div>
 
