--- a/news.html
+++ b/news.html
@@ -28,8 +28,8 @@
 
    <!-- favicons
 	================================================== -->
-	<link rel="shortcut icon" href="images/loghi/ebec_icona.png" type="image/x-icon">
-	<link rel="icon" href="images/loghi/ebec_icona.png" type="image/x-icon">
+	<link rel="shortcut icon" href="images/loghi/ebec_icona2.png" type="image/x-icon">
+	<link rel="icon" href="images/loghi/ebec_icona2.png" type="image/x-icon">
 
 </head>
 
@@ -39,8 +39,8 @@
    ================================================== -->
    <header> 
 
-   	<div class="header-logo">
-	      <a href="index.html"><img src="images/loghi/ebec_icona.png" width="10%" height="10%">EBEC</a>
+    	<div class="header-logo" style="width:8%; height:8%">
+	      <a href="index.html"><img src="images/loghi/ebec_icona.png" >EBEC</a>
 	   </div> 
 
 		<a id="header-menu-trigger" href="#0">
@@ -82,7 +82,7 @@
 
    <!-- home
    ================================================== -->
-   <section id="home" style="background-image:url('images/background/speech.jpg')">
+   <section id="home" style="background-image:url('images/background/world.jpg')">
 
    	<div class="overlay"></div>
 
@@ -91,8 +91,8 @@
 		   	<div class="row">
 		   		<div class="col-twelve">		   			
 			  		
-			  				<h3 class="animate-intro">NEWS</h3>
-				  			<h1 class="animate-intro">What's New?</h1>					
+			  				<h3 class="animate-intro">Stay tuned!</h3>
+				  			<h1 class="animate-intro">NEWS</h1>					
 			  		</div>  
 		   	</div>  
 		   </div>  		   
@@ -100,13 +100,13 @@
 
 		<ul class="home-social-list">
 	      <li class="animate-intro">
-	        	<a href="https://m.facebook.com/EBECItalia/?locale2=it_IT"><i class="fa fa-facebook-square"></i></a>
+				<a href="https://www.facebook.com/BESTorg.EBEC/"><i class="fa fa-facebook-square"></i></a>
 	      </li>
 	      <li class="animate-intro">
-	        	<a href="https://www.instagram.com/ebec_italy/?hl=it"><i class="fa fa-instagram"></i></a>
+	         	<a href="https://www.instagram.com/bestorg.ebec/"><i class="fa fa-instagram"></i></a>
 	      </li>
 	      <li class="animate-intro">
-	        	<a href="https://www.linkedin.com/company/ebec-italy/"><i class="fa fa-linkedin"></i></a>
+	         	<a href="https://www.linkedin.com/showcase/european-best-engineering-competition-ebec-/"><i class="fa fa-linkedin"></i></a>
 	      </li>	      
 	   </ul> <!-- end home-social-list -->	
 
@@ -150,7 +150,7 @@
    			<div class="about-profile-bg"></div>
 
 				<div class="intro">
-					<h1 class="animate-this" style="color: #27C274; font-family: lovelo-line-bold, sans-serif; font-size: 5rem">Articles</h1>
+					<h1 class="animate-this" style="color: #27C274; font-size: 5rem">Articles</h1>
 	   			<p class="lead animate-this" style="color: #299c87"></p>
 				</div>
 
@@ -161,40 +161,65 @@
 	   <div class="services-list block-1-2 block-tab-full group">
 
 		   <div class="bgrid service-item animate-this">
-			   <a href="https://www.linkedin.com/feed/update/urn:li:activity:6523254576928296960" target="_blank">
-				   <img class="icon" src="images/gallery/post1.jpg">
+			   <a href="https://www.linkedin.com/posts/ebec-italy_stakeholder-takethechallenge-competition-activity-6777882119134875648-M2gv" target="_blank">
+				   <img class="icon" src="images/post/post4.jpg">
 				   <div class="service-content">
-					   <h2 class="h05">BEST Politecnico di Torino<br>on LinkedIn</h2>
-					   <p>It’s the FINAL countdown!<br>
-						   Only 100 days left for the final round of the biggest Engineering competition in Europe.
-						   ... <br>[Read the article]</p></p>
+					   <h2 class="h05" style="font-family: montserrat-regular">EBEC Italy on LinkedIn</h2>
+					   <p>The covid-19 situation doesn't allow to organise a live Ebec Italy, but we are moving forward to ...<br>[Read the article]</p>
 				   </div>
 			   </a>
 		   </div> <!-- end bgrid -->
 
 		   <div class="bgrid service-item animate-this">
-			   <a href="https://www.linkedin.com/feed/update/urn:li:activity:6502179841968738305" target="_blank">
-				   <img class="icon" src="images/gallery/post0.png">
+			   <a href="https://www.linkedin.com/posts/ebec-italy_sfide-polimi-softskills-activity-6775731725151612928-1Kzd" target="_blank">
+				   <img class="icon" src="images/post/post3.jpg">
 				   <div class="service-content">
-					   <h2 class="h05">BEST Politecnico di Torino<br>on LinkedIn</h2>
-					   <p>Can you imagine the best 120 engineering students from all over Europe challenging
-						   each other in 6 days of competition? ... <br>[Read the article]</p>
+					   <h2 class="h05" style="font-family: montserrat-regular">EBEC Local Round Naples 2021 on LinkedIn</h2>
+					   <p>The local rounds continue. After Turin, Milan and Rome is now the moment of the city of thousand colors: Naples ...<br>[Read the article]</p>
 				   </div>
 			   </a>
 		   </div> <!-- end bgrid -->
 
 
 	   </div>
+
+	   <div class="services-list block-1-2 block-tab-full group">
+
+		   <div class="bgrid service-item animate-this">
+			   <a href="https://www.linkedin.com/posts/ebec-italy_teamdesign-casestudy-activity-6737748269293731840-jIFt" target="_blank">
+				   <img class="icon" src="images/post/post1.jpg">
+				   <div class="service-content">
+					   <h2 class="h05" style="font-family: montserrat-regular">EBEC Italy on LinkedIn</h2>
+					   <p>Ebec Italy is one of the numerous national round of EBEC, where the best 2 teams from each Italian Local Round ... <br>[Read the article]</p>
+				   </div>
+			   </a>
+		   </div> <!-- end bgrid -->
+
+		   <div class="bgrid service-item animate-this">
+			   <a href="https://www.linkedin.com/posts/best-politecnico-di-torino_ebec2021-bestorino-ebec-activity-6737058834528915456-EXiz" target="_blank">
+				   <img class="icon" src="images/post/post2.jpg">
+				   <div class="service-content">
+					   <h2 class="h05" style="font-family: montserrat-regular">EBEC Local Round Turin 2021 on LinkedIn</h2>
+					   <p>250 engineering students have already challenged themselves in one of the biggest local round of BEST Italy ... <br>[Read the article]</p>
+				   </div>
+			   </a>
+		   </div> <!-- end bgrid -->
+
+
+	   </div>
+	   
    </section> <!-- end about -->
+   
+   
 
 
-<!-- <section id="portfolio">
+<!-- <section id="portfolio"> DA COMPLETAREE
 
    	<div class="intro-wrap">
 
    		<div class="row narrow section-intro with-bottom-sep animate-this">
 	   		<div class="col-twelve">
-	   			<h3>#EBECX</h3>
+	   			<h3>Ebec Italy</h3>
 		   		<h1 style="font-family: lovelo-line-bold, sans-serif">Social Wall</h1>
 	   		</div>
 	   	</div>
@@ -211,24 +236,24 @@
 		</div>
    	</div>
 
-   </section> -->
+   </section>  -->
    
-<footer>
+	<footer>
      	<div class="footer-main" style="font-family: montserrat-regular">
 
    		<div class="row">
 
 			<div class="col-five tab-full footer-about">
-				<a href="https://ebec.best.eu.org/" target="_blank"><img src="images/loghi/EBEC.png" style="height:137px; width:350px"></a>
+				<a href="https://ebec.best.eu.org/" target="_blank"><img src="images/loghi/ebec_italy_white.png" style="height:137px; width:350px"></a>
 				<ul style="text-align: center">
 					<li>
-						<a href="" target="_blank"><i class="fa fa-facebook-square"></i> Facebook</a>
+						<a href="https://m.facebook.com/EBECItalia/?locale2=it_IT" target="_blank"><i class="fa fa-facebook-square"></i> Facebook</a>
 					</li>
 					<li>
-						<a href="" target="_blank"><i class="fa fa-instagram"></i> Instagram</a>
+						<a href="https://www.instagram.com/ebec_italy/?hl=it" target="_blank"><i class="fa fa-instagram"></i> Instagram</a>
 					</li>
 					<li>
-						<a href="" target="_blank"><i class="fa fa-linkedin-square"></i> LinkedIn</a>
+						<a href="https://www.linkedin.com/company/ebec-italy/" target="_blank"><i class="fa fa-linkedin-square"></i> LinkedIn</a>
 					</li>
 				</ul>
 			</div> <!-- end footer-about -->
@@ -242,13 +267,13 @@
 				<a href="https://www.best.eu.org/index.jsp" target="_blank"><img src="images/loghi/BEST.png" style="height:137px; width:350px"></a>
 				<ul style="text-align: center">
 					<li>
-						<a href="" target="_blank"><i class="fa fa-facebook-square"></i> Facebook</a>
+						<a href="https://it-it.facebook.com/BESTorg/" target="_blank"><i class="fa fa-facebook-square"></i> Facebook</a>
 					</li>
 					<li>
-						<a href="" target="_blank"><i class="fa fa-instagram"></i> Instagram</a>
+						<a href="https://www.instagram.com/bestorg/?hl=it" target="_blank"><i class="fa fa-instagram"></i> Instagram</a>
 					</li>
 					<li>
-						<a href="" target="_blank"><i class="fa fa-linkedin-square"></i> LinkedIn</a>
+						<a href="https://www.linkedin.com/company/best/" target="_blank"><i class="fa fa-linkedin-square"></i> LinkedIn</a>
 					</li>
 				</ul>
 			</div> <!-- end footer-subscribe -->
