Modifica descrizioni/titolo
Descrizioni/titoli

--- a/about_us.html
+++ b/about_us.html
@@ -158,13 +158,13 @@
 				<div class="intro">
 				<div class="row narrow section-intro animate-this">
 					<div class="col-full">
-					<h1 class="animate-this" style="color: #27C274">ABOUT BEST MESSINA</h1>
+					<h1 class="animate-this" style="color: #27C274">ABOUT BEST TORINO</h1>
 					</div> <!-- end col-full -->
 				</div> <!-- end row -->
 	   			<p class="lead animate-this"; style="line-height: 2.5rem; font-size: 1.8rem">
-					BEST Messina is a member of the network since 2008.
-					During these 12 years, BEST contributed substantially to the internationalization process of Università di Messina.
-					Thanks to BEST, more than 2500 foreign studentds had the opportunity to participate to free academical and competitions all over Europe.
+					BEST Torino is a member of the network since 1989.
+					<br>
+					Our mission is to develop students and let them grow up with us, providing amazing experiences in Italy and in Europe.
 				</p>	
 				</div>
 
