--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 			<a href="#0" class="close-button" title="close"><span>Close</span></a>	
 
-	   	<h3>EBEC Italy<br>Messina 2021</h3>  
+	   	<h3>EBEC Italy<br>Torino 2022</h3>  
 
 			<ul class="nav-list">
 				<li class="current"><a class="smoothscroll" href="#home" title="">Home</a></li>
@@ -93,7 +93,7 @@
                          
 						 
 				 <h2 class="animate-intro"> <img src="./images/loghi/ebec_italy_white.png" alt="logo" width="50%"></h2>					
-				  <h1 class="animate-intro">Messina 2021</h1>	
+				  <h1 class="animate-intro">Torino 2022</h1>	
 			  		</div> 
 		   	</div> 
 		   </div>  		   
@@ -133,7 +133,7 @@
 				<div class="intro">
 					<div class="row narrow section-intro animate-this fadeInUp animated">
 						<div class="col-full">
-							<h1 style="color: #27C274;">EBEC Italy Messina 2021</h1>
+							<h1 style="color: #27C274;">EBEC Italy Torino 2022</h1>
 							<p style="color:#177245; font-family: montserrat-bold;  line-height: 2.5rem; font-size: 1.8rem">DESIGN THE FUTURE. TODAY.</p>
 						 </div><!-- end col-full -->
 					</div> <!-- end row -->
@@ -176,7 +176,7 @@
                <img src="./images/Icone/WHEN.png" style="height: 150px; width: 150px">
 	            <div class="service-content">
 	            	<h3 class="h05" style="color:#ffffff">When</h3>
-	         		<p>From May 19th<br>to May 21th 2021</p>
+	         		<p>From May 2nd<br>to May 6th 2022</p>
 	         	</div> 	         	 
 
 			</div> <!-- end bgrid -->
@@ -186,7 +186,7 @@
                <img src="./images/Icone/WHERE.png" style="height: 150px; width: 150px">
 	            <div class="service-content">	
 	            	<h3 class="h05" style="color:#ffffff">Where</h3>  
-			        <p>Online with Microsoft Teams</p>
+			        <p>Politecnico di Torino</p>
 	            </div>	                          
 
 			   </div> <!-- end bgrid -->
