--- a/team.html
+++ b/team.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>EBEC Italy Messina 2021</title>
+	<title>EBEC Italy Torino 2022</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -54,7 +54,7 @@
 
 			<a href="#0" class="close-button" title="close"><span>Close</span></a>	
 
-	   	<h3>EBEC Italy<br>Messina 2021</h3>  
+	   	<h3>EBEC Italy<br>Torino 2022</h3>  
 
 			<ul class="nav-list">
 				<li><a href="./index.html" target="_self">Home</a></li>
@@ -146,7 +146,7 @@
 	                     	<span class="folio-types">
 		     					      EBEC Italy Coordinator
 		     					 </span>
-		     					   <h3 class="folio-title">Francesco Marino</h3>  	     					   
+		     					   <h3 class="folio-title">Giuliana Paradiso</h3>  	     					   
 		     					</div>                                        
 	                  </a>
 	                  <a href="https://www.linkedin.com/in/francesco-marino-502859101/" class='details-link' title="details">
@@ -155,7 +155,7 @@
 	               </div> <!-- end item-wrap ì
 
 	               <div id="02" class='hide'>
-							<h4>Francesco Marino</h4>
+							<h4>Giuliana Paradiso</h4>
 					</div>	               
 	        	</div> <!-- end folio-item ì
 
@@ -217,7 +217,7 @@
 	                     	<span class="folio-types">
 		     					      EBEC Italy Coordinator
 		     					 </span>
-		     					   <h3 class="folio-title">Francesco Marino</h3>  	     					   
+		     					   <h3 class="folio-title">Giuliana Paradiso</h3>  	     					   
 		     					</div>                                        
 	                  </a>
 	                  <a href="https://www.linkedin.com/in/francesco-marino-502859101/" class='details-link' title="details">
@@ -226,7 +226,7 @@
 	               </div> <!-- end item-wrap -->
 
 	               <div id="02" class='hide'>
-							<h4>Francesco Marino</h4>
+							<h4>Giuliana Paradiso</h4>
 					</div>	               
 	        	</div> <!-- end folio-item -->
 
@@ -288,7 +288,7 @@
 	                     	<span class="folio-types">
 		     					      PR Responsible
 		     					   </span>
-		     					   <h3 class="folio-title">Valeria Cafasso</h3>  	     					   
+		     					   <h3 class="folio-title">Isabella Schifano</h3>  	     					   
 		     					</div>                                        
 	                  </a>
 	                  <a href="https://www.linkedin.com/in/valeria-cafasso/" class='details-link' title="details">
@@ -297,7 +297,7 @@
 	               </div> <!-- end item-wrap -->
 
 	               <div id="02" class='hide'>
-							<h4>Valeria Cafasso</h4>
+							<h4>Isabella Schifano</h4>
 							</div>	               
 	        		</div> <!-- end folio-item -->
 			</div> <!-- end folio-wrap -->	
@@ -316,7 +316,7 @@
 		     					   <span class="folio-types">
 		     					      IT Responsible
 		     					   </span>
-		     					   <h3 class="folio-title">Gabriele Greco</h3>
+		     					   <h3 class="folio-title">Silvio Cuccia</h3>
 		     					</div>                                        
 	                  </a>
 	                  <a href="https://www.linkedin.com/in/gabriele-greco-2228b8174/" class='details-link' title="details">
@@ -325,7 +325,7 @@
 	               </div> <!-- end item-wrap -->	
 
 	               <div id="03" class='hide'>
-							<h4>Gabriele Greco</h4>
+							<h4>SIlvio Cuccia</h4>
 							</div>               
 	        		</div> <!-- end folio-item -->
 
