--- a/team.html
+++ b/team.html
@@ -353,9 +353,9 @@
 
 	           
 					<div class="brick folio-item" style="padding-right: 4% ">
-	               <div class="item-wrap animate-this"  data-src="images/team/noemi.jpg"  data-sub-html="#06">     	
+	               <div class="item-wrap animate-this"  data-src="images/team/noemi.jpeg"  data-sub-html="#06">     	
 	                  <a href="#" class="overlay">
-	                  	<img src="images/team/noemi.jpg" alt="Salad">	                     
+	                  	<img src="images/team/noemi.jpeg" alt="Salad">	                     
 	                     <div class="item-text">	     					    
 		     					   <span class="folio-types">
 		     					      Innovative Design Responsible
