Daniela e Instagram Dario
Ho aggiunto Daniela nella voce ?Team" e ho messo l'instagram di Dario, non ha LinkedIn

--- a/team.html
+++ b/team.html
@@ -133,78 +133,9 @@
    
    </section> <!-- end home -->
 
-<!-- DUE PERSONE -->
 
-   	<!--	<div class="col-twelve" style=" padding-bottom: 4%; padding-left: 20%; padding-right: 40%; width:190%;">
-   			<div id="folio-wrap" class="bricks-wrapper">					
-
-                <div class="brick folio-item" style="padding-right: 4%">
-	               <div class="item-wrap animate-this" data-src="images/team/ciccio.jpg" data-sub-html="#02" > 	
-	                  <a href="#" class="overlay">
-	                  	<img src="images/team/ciccio.jpg" alt="Shutterbug" >	                     
-	                     <div class="item-text">
-	                     	<span class="folio-types">
-		     					      EBEC Italy Coordinator
-		     					 </span>
-		     					   <h3 class="folio-title">Giuliana Paradiso</h3>  	     					   
-		     					</div>                                        
-	                  </a>
-	                  <a href="https://www.linkedin.com/in/francesco-marino-502859101/" class='details-link' title="details">
-	                  	<i class="fa fa-linkedin-square"></i>
-	                  </a>
-	               </div> <!-- end item-wrap ì
-
-	               <div id="02" class='hide'>
-							<h4>Giuliana Paradiso</h4>
-					</div>	               
-	        	</div> <!-- end folio-item ì
-
-	        	ì <div class="brick folio-item" style="padding-right: 4%">
-	               <div class="item-wrap animate-this" data-src="images/team/davide.jpg" data-sub-html="#03" >   	
-	                  <a href="#" class="overlay">
-	                  	<img src="images/team/davide.jpg" alt="Explore">	                     
-	                     <div class="item-text">	                     		     					    
-		     					   <span class="folio-types">
-		     					      Project Manager
-		     					   </span>
-		     					   <h3 class="folio-title">Davide Carulli</h3>
-		     					</div>                                        
-	                  </a>
-	                  <a href="https://www.linkedin.com/in/davide-carulli-285883200/" class='details-link' title="details">
-	                  	<i class="fa fa-linkedin-square"></i>
-	                  </a>
-	               </div> <!-- end item-wrap 
-
-	               <div id="03" class='hide'>
-							<h4>Davide Carulli</h4>
-						</div>               
-	        	</div> <!-- end folio-item 
-			</div> <!-- end folio-wrap 
-		</div> <!-- end twelve -->	
-
-
-
-
-
-
-
- 
-
-   <!-- portfolio
-   ================================================== -->
-   <section id="portfolio">
-   	
-   	<div class="intro-wrap" style="background: #177245">
-
-   		<div class="row narrow section-intro with-bottom-sep animate-this">
-	   		<div class="col-twelve">
-	   			<h3>The actors behind the scenes</h3>
-		   		<h1>OUR TEAM</h1>   			
-	   		</div>   		
-	   	</div> <!-- end row section-intro -->   		
-
-   	</div> <!-- end intro-wrap -->   	
-
+<!-- UNA PERSONA -->
+<!--
    	<div class="row portfolio-content">
    		<div class="col-twelve" style=" padding-bottom: 4%; padding-left: 36.5%; width:174%;">
    			<div id="folio-wrap" class="bricks-wrapper">					
@@ -223,16 +154,83 @@
 	                  <a href="https://www.linkedin.com/in/giuliana-paradiso-1aa7331a9/" class='details-link' title="details">
 	                  	<i class="fa fa-linkedin-square"></i>
 	                  </a>
-	               </div> <!-- end item-wrap -->
+	               </div> <!-- end item-wrap 
 
 	               <div id="02" class='hide'>
 							<h4>Giuliana Paradiso</h4>
 					</div>	               
-	        	</div> <!-- end folio-item -->
+	        	</div> <!-- end folio-item 
 
 
-			</div> <!-- end folio-wrap -->	
+			</div> <!-- end folio-wrap 
 		</div> <!-- end twelve -->	
+
+
+   <!-- portfolio
+   ================================================== -->
+   <section id="portfolio">
+   	
+   	<div class="intro-wrap" style="background: #177245">
+
+   		<div class="row narrow section-intro with-bottom-sep animate-this">
+	   		<div class="col-twelve">
+	   			<h3>The actors behind the scenes</h3>
+		   		<h1>OUR TEAM</h1>   			
+	   		</div>   		
+	   	</div> <!-- end row section-intro -->   		
+
+   	</div> <!-- end intro-wrap -->   	
+
+	<div class="row portfolio-content">
+	<div class="col-twelve" style=" padding-bottom: 4%; padding-left: 20%; padding-right: 40%; width:190%;">
+		<div id="folio-wrap" class="bricks-wrapper">					
+
+		<div class="brick folio-item" style="padding-right: 4%">
+			<div class="item-wrap animate-this" data-src="images/team/giuli.jpeg" data-sub-html="#02" > 	
+			   <a href="#" class="overlay">
+				<img src="images/team/giuli.jpeg" alt="Shutterbug" >	                     
+				<div class="item-text">
+					<span class="folio-types">
+							  EBEC Italy Coordinator
+					</span>
+						   <h3 class="folio-title">Giuliana Paradiso</h3>  	     					   
+				</div>                                        
+				</a>
+				<a href="https://www.linkedin.com/in/giuliana-paradiso-1aa7331a9/" class='details-link' title="details">
+				 	<i class="fa fa-linkedin-square"></i>
+			 	</a>
+			</div> <!-- end item-wrap ì -->
+
+			<div id="02" class='hide'>
+					 <h4>Giuliana Paradiso</h4>
+			</div>	               
+		</div> <!-- end folio-item ì -->
+
+
+		<div class="brick folio-item" style="padding-right: 4%">
+			<div class="item-wrap animate-this" data-src="images/team/daniela.jpeg" data-sub-html="#03" >   	
+			   <a href="#" class="overlay">
+				   <img src="images/team/daniela.jpeg" alt="Explore">	                     
+				    <div class="item-text">	                     		     					    
+							 <span class="folio-types">
+								Project Manager
+							 </span>
+							 <h3 class="folio-title">Daniela Antonelli</h3>
+					</div>                                        
+			   </a>
+			   <a href="https://www.linkedin.com/in/daniela-antonelli-2a2487223/" class='details-link' title="details">
+				   <i class="fa fa-linkedin-square"></i>
+			   </a>
+			</div> <!-- end item-wrap -->
+
+			<div id="03" class='hide'>
+				<h4>Daniela Antonelli</h4>
+			</div>               
+		</div> <!-- end folio-item -->
+
+		</div> <!-- end folio-wrap -->
+	</div> <!-- end twelve -->
+
 		
 		<div class="col-twelve" style=" padding-bottom: 4%; padding-left: 3%; padding-right: 22%; width: 160%;">	
 			<div id="folio-wrap2" class="bricks-wrapper" >
@@ -248,8 +246,8 @@
 		     					   <h3 class="folio-title">Dario Gagliarde</h3>
 		     					</div>                                        
 	                  </a>
-	                  <a href="https://www.linkedin.com/in/pierpaolo-mauro-7a486a1a5/" class='details-link' title="details">
-	                  	<i class="fa fa-linkedin-square"></i>
+	                  <a href="https://www.instagram.com/dario_gagliarde/" class='details-link' title="details">
+	                  	<i class="fa fa-instagram"></i>
 	                  </a>
 	               </div> <!-- end item-wrap -->
 
