Contact us/piramide/innovative design
Contact us/piramide/innovative design

--- a/about_us.html
+++ b/about_us.html
@@ -188,16 +188,21 @@
    			
    			   <p class="lead" style="color:#bfc7cf; line-height: 2.5rem; font-size: 1.8rem">
 				   <span style="color: #ffffff;">European BEST Engineering Competition (EBEC)</span></a>
-				   is a 3 level, team-based competition, on 2 categories - Team Design and Case Study.<br><br>
+				   is a 3 level, team-based competition, on 3 categories - Team Design, Innovative Design and Case Study.<br><br>
 				   In <span style="color: #fff;">Team Design</span> teams are solving tasks within a limited time and a limited availability
-				   of materials. The desired outcome is a device that has to perform the needed actions.<br>In <span style="color: #fff;">Case Study</span>
+				   of materials. The desired outcome is a device that has to perform the needed actions.<br><br>
+				   In <span style="color: #fff;">Innovative Design</span> the competitors should combine their creativity and knowledge 
+				   to develop new technological designs or improve upon existing ones, with a focus in the technical, social, environmental, 
+				   and economic impact of their design.<br><br>
+				   In <span style="color: #fff;">Case Study</span>
 				   category contestants need to provide a solution to a technical or a management problem and to present the outcome
-				   they came up with.<br><br>Teams are composed of 4 students from technology fields, regardless of status of their degree,
+				   they came up with.<br><br>
+   				   Teams are composed of 4 students from technology fields, regardless of status of their degree,
 				   and tasks they're solving are provided by BEST and company partners. The team which proves to be the most efficient,
-				   creative and successful solution at the end of competition finale is granted by “BEST Engineers of Europe” title.
-   			
+				   creative and successful solution at the end of competition finale is granted by “BEST Engineers of Europe” title.<br>
+
    	   </div> <!-- end col-full -->
-   	</div> <!-- end row --> <!-- PIRAMIDE EBEC -->
+   	</div> <!-- end row --> <!-- PIRAMIDE EBEC (font piramide: Franklin Gothic)-->
 
    	<div class="row services-content">
 	
