--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 					</div> <!-- end row -->
 	   			<p style="line-height: 2.5rem; font-size: 1.8rem">
                  The National Round of EBEC Italy is one of the most challenging rounds of the EBEC Pyramid, gathering
-				 the best 48 students who have won their Local Round in Turin, Milan, Naples, Messina, Rome Sapienza and Rome Tor Vergata.<br><br>
+				 the best 40 students who have won their Local Round in Turin, Milan, Naples, Rome Sapienza and Rome Tor Vergata.<br><br>
 				 The finalists are highly talented and skilled students immersed in a dynamic, multicultural and innovative environment where students,
 				 companies and universities share and gain knowledge about the world of tech.
 				</p>
@@ -176,7 +176,7 @@
                <img src="./images/Icone/WHEN.png" style="height: 150px; width: 150px">
 	            <div class="service-content">
 	            	<h3 class="h05" style="color:#ffffff">When</h3>
-	         		<p>From May 2nd<br>to May 6th 2022</p>
+	         		<p>From May 4th<br>to May 7th 2022</p>
 	         	</div> 	         	 
 
 			</div> <!-- end bgrid -->
@@ -208,7 +208,7 @@
 			   
 	            <div class="service-content">
 	            	<h3 class="h05" style="color:#ffffff">Who</h3>
-			        <p>The best 48 students<br>from all over Italy
+			        <p>The best 40 students<br>from all over Italy
 	        		</p>
 	            </div>                
 
