--- a/news.html
+++ b/news.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>EBEC Italy Messina 2021</title>
+	<title>EBEC Italy Torino 2022</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -52,7 +52,7 @@
 
 			<a href="#0" class="close-button" title="close"><span>Close</span></a>	
 
-	   	<h3>EBEC Italy<br>Messina 2021</h3>  
+	   	<h3>EBEC Italy<br>Torino 2022</h3>  
 
 			<ul class="nav-list">
 				<li><a href="./index.html" target="_self">Home</a></li>
