--- a/team.html
+++ b/team.html
@@ -411,7 +411,7 @@
 
 
 			<div class="col-four tab-full footer-subscribe end">
-				<a href="https://www.best.eu.org/index.jsp" target="_blank"><img src="images/loghi/BEST.png" style="height:137px; width:350px"></a>
+				<a href="https://www.best.eu.org/index.jsp" target="_blank"><img src="images/loghi/best.png" style="height:137px; width:350px"></a>
 				<ul style="text-align: center">
 					<li>
 						<a href="https://it-it.facebook.com/BESTorg/" target="_blank"><i class="fa fa-facebook-square"></i> Facebook</a>
