Gabriele to Silvio

--- a/contact_us.html
+++ b/contact_us.html
@@ -317,7 +317,7 @@
       		<div class="col-twelve">
 				<div class="copyright">
 					<span>© Copyright 2021 BEST Italy</span>
-					<span>Design by Gabriele Greco <a href="https://www.linkedin.com/in/gabriele-greco-2228b8174/" target="_blank"><i class="fa fa-linkedin-square"></i></a></span>
+					<span>Design by Silvio Cuccia <a href="https://www.linkedin.com/in/silvio-cuccia-765761232/" target="_blank"><i class="fa fa-linkedin-square"></i></a></span>
 				</div>
 	      	</div>
       	</div>
