--- a/partners.html
+++ b/partners.html
@@ -313,12 +313,14 @@
 	</div> <!-- end services-content -->
 	
        </div>
+
+<!-- PARTNERS CASE STUDY 2019 -->
 	
-	<div class="row narrow section-intro animate-this">
+<!--	<div class="row narrow section-intro animate-this">
 	
 		<div class="col-full">
 			<h2 style="font-family: montserrat-bold, sans-serif; color: #ffffff; padding-bottom: 3rem; font-size: 3rem;">CASE STUDY 2019</h2>
-		</div> <!-- end col-full -->
+		</div> <!-- end col-full 
 
 
 		<div class="services-list block-1-2 block-tab-full group">
@@ -329,7 +331,7 @@
 					<h3 class="h05"></h3>
 					<p style="line-height: 2rem"></p>
 				</div>
-			</div> <!-- end bgrid -->
+			</div> <!-- end bgrid 
 
 			<div class="bgrid service-item animate-this">
 				<a target="_blank" href="https://www.credem.it/content/credem/it/privati-e-famiglie.html"><img class="icon" src="images/partners/credembanca.jpg" style="width: 250px; margin-top: 15px"></a>
@@ -430,7 +432,7 @@
       		<div class="col-twelve">
 				<div class="copyright">
 					<span>© Copyright 2021 BEST Italy</span>
-					<span>Design by Gabriele Greco <a href="https://www.linkedin.com/in/gabriele-greco-2228b8174/" target="_blank"><i class="fa fa-linkedin-square"></i></a></span>
+					<span>Design by Silvio Cuccia <a href="https://www.linkedin.com/in/silvio-cuccia-765761232/" target="_blank"><i class="fa fa-linkedin-square"></i></a></span>
 				</div>
 	      	</div>
       	</div>
