Patronici_Sponsor_PR

--- a/team.html
+++ b/team.html
@@ -279,23 +279,23 @@
 	        	   </div> <!-- end folio-item -->   				
  
 	        		<div class="brick folio-item" style="padding-right: 4%">
-	               <div class="item-wrap animate-this" data-src="images/team/isa.jpeg" data-sub-html="#02"> 	
+	               <div class="item-wrap animate-this" data-src="images/team/silvio.jpeg" data-sub-html="#02"> 	
 	                  <a href="#" class="overlay">
-	                  	<img src="images/team/isa.jpeg" alt="Shutterbug">	                     
+	                  	<img src="images/team/silvio.jpeg" alt="Shutterbug">	                     
 	                     <div class="item-text">
 	                     	<span class="folio-types">
 		     					      PR Responsible
 		     					   </span>
-		     					   <h3 class="folio-title">Isabella Schifano</h3>  	     					   
+		     					   <h3 class="folio-title">Silvio Cuccia</h3>  	     					   
 		     					</div>                                        
 	                  </a>
-	                  <a href="https://www.linkedin.com/in/isabella-schifano-34a5b41ba/" class='details-link' title="details">
+	                  <a href="https://www.linkedin.com/in/silvio-cuccia-765761232/" class='details-link' title="details">
 	                  	<i class="fa fa-linkedin-square"></i>
 	                  </a>
 	               </div> <!-- end item-wrap -->
 
 	               <div id="02" class='hide'>
-							<h4>Isabella Schifano</h4>
+							<h4>Silvio Cuccia</h4>
 							</div>	               
 	        		</div> <!-- end folio-item -->
 			</div> <!-- end folio-wrap -->	
