--- a/partners.html
+++ b/partners.html
@@ -244,7 +244,7 @@
 			</div>
 		</div>
 
-	</div>
+	</div> -->
 
 	<div class="row narrow section-intro animate-this">
 		<div class="col-full">
@@ -260,7 +260,7 @@
 		 <div class="services-list block-1-3 block-tab-full group">
 			<div class="bgrid service-item animate-this">
 				<a target="_blank" href="http://www.comune.torino.it/">
-					<img class="icon" src="images/partners/citta_torino.png" style="width: 250px">
+					<img class="icon" src="images/partners/citta_torino.jpg" style="width: 250px">
 				</a>
 			</div> 
 
@@ -270,17 +270,35 @@
 				</a>
 			</div> 
 
+			<div class="bgrid service-item animate-this">
+				<a target="_blank" href="https://www.cnr.it/en">
+					<img class="icon" src="images/partners/cnr.jpg" style="width: 250px; margin-top: 20px">
+				</a>
+			</div> 
+
+			<div class="bgrid service-item animate-this">
+				<a target="_blank" href="https://www.confindustria.it/home">
+					<img class="icon" src="images/partners/confindustria.png" style="width: 250px; margin-top: 20px">
+				</a>
+			</div> 
+
+			<div class="bgrid service-item animate-this">
+				<a target="_blank" href="https://www.cni.it/albo-unico">
+					<img class="icon" src="images/partners/ordine_ing.png" style="width: 250px; margin-top: 20px">
+				</a>
+			</div> 
+
 		</div>
 
 	</div> -->
 	
-	<div class="row narrow section-intro animate-this">
+	<!-- <div class="row narrow section-intro animate-this">
 	
 			<div class="col-full">
 				<hr style="color: white">
 				<hr style="color: white; padding-bottom: 5rem">
 				<h1>PAST PARTNERS</h1>
-				<h2 style="font-family: montserrat-bold, sans-serif; color: #ffffff; padding-bottom: 3rem; font-size: 3rem;">CASE STUDY 2020</h2>
+				<h2 style="font-family: montserrat-bold, sans-serif; color: #ffffff; padding-bottom: 3rem; font-size: 3rem;">CASE STUDY 2021</h2>
 			</div> 
 	
 			
@@ -293,13 +311,13 @@
 					<h3 class="h05"></h3>
 				</div>
 
-			</div> <!-- end bgrid -->
+			</div> <!-- end bgrid 
 			<div class="bgrid service-item animate-this" style="padding-top: 3%">
-				<a target="_blank" href="https://www.geo-bg.com/"><img class="icon" src="images/partners/nuvola.png" style="width: 250px"></a>
+				<a target="_blank" href="https://new.abb.com/it"><img class="icon" src="images/partners/abb.png" style="width: 250px"></a>
 				<div class="service-content">
-					<h3 class="h05">NUVOLA</h3>
+					<h3 class="h05"></h3>
 				</div>
-			</div> <!-- end bgrid -->
+			</div> <!-- end bgrid 
 
 			<div class="bgrid service-item animate-this">
 				<div class="service-content">
@@ -343,18 +361,23 @@
 
 		</div> <!-- end services-list -->
 	</div> <!-- end row -->
+
+	 <div class="row narrow section-intro animate-this">
 	
-		<div class="row narrow section-intro animate-this">
-	
-		<div class="col-full">
-			<h2 style="font-family: montserrat-bold, sans-serif; color: #ffffff; padding-bottom: 3rem; font-size: 3rem;">TEAM DESIGN 2019</h2>
-		</div> <!-- end col-full -->
+			<div class="col-full">
+				<hr style="color: white">
+				<hr style="color: white; padding-bottom: 5rem">
+				<h1>PAST PARTNERS</h1>
+				<h2 style="font-family: montserrat-bold, sans-serif; color: #ffffff; padding-bottom: 3rem; font-size: 3rem;">CASE STUDY 2021</h2>
+			</div> 
+
+	<div class="row narrow section-intro animate-this">
 
 
 		<div class="services-list block-1-2 block-tab-full group">
 
 			<div class="bgrid service-item animate-this">
-				<a target="_blank" href="https://www.swisslog-healthcare.com/it-it"><img class="icon" src="images/partners/swisslogo.svg" style="width: 250px; margin-top: 40px"></a>
+				<a target="_blank" href="https://new.abb.com/it"><img class="icon" src="images/partners/abb.png" style="width: 250px; margin-top: 110px"></a>
 				<div class="service-content">
 					<h3 class="h05"></h3>
 					<p style="line-height: 2rem"></p>
@@ -362,7 +385,36 @@
 			</div> <!-- end bgrid -->
 
 			<div class="bgrid service-item animate-this" style="padding-top: 5%">
-				<a target="_blank" href="https://www.linkedin.com/company/fast-charge/?originalSubdomain=it"><img class="icon" src="images/partners/fastcharge.jpg" style="width: 300px; margin-top: 15px"></a>
+				<a target="_blank" href="https://www.skoda-auto.it/?state=NEW&aid=f893280a-26b8-4067-8125-b490abddb060"><img class="icon" src="images/partners/skoda.png" style="width: 220px; margin-top: 5px"></a>
+				<div class="service-content">
+					<h3 class="h05"></h3>
+					<p style="line-height: 2rem"></p>
+				</div>
+			</div> <!-- end bgrid -->
+
+		</div> <!-- end services-list -->
+	</div> <!-- end row -->
+
+	
+		<div class="row narrow section-intro animate-this">
+	
+		<div class="col-full">
+			<h2 style="font-family: montserrat-bold, sans-serif; color: #ffffff; padding-bottom: 3rem; font-size: 3rem;">TEAM DESIGN 2021</h2>
+		</div> <!-- end col-full -->
+
+
+		<div class="services-list block-1-2 block-tab-full group">
+
+			<div class="bgrid service-item animate-this">
+				<a target="_blank" href="https://www.danieli.com/en/"><img class="icon" src="images/partners/danieli.svg" style="width: 350px; margin-top: 70px"></a>
+				<div class="service-content">
+					<h3 class="h05"></h3>
+					<p style="line-height: 2rem"></p>
+				</div>
+			</div> <!-- end bgrid -->
+
+			<div class="bgrid service-item animate-this" style="padding-top: 5%">
+				<a target="_blank" href="http://www.eaton.it/EatonIT/index.htm"><img class="icon" src="images/partners/eaton.png" style="width: 350px; margin-top: 15px"></a>
 				<div class="service-content">
 					<h3 class="h05"></h3>
 					<p style="line-height: 2rem"></p>
