--- a/partners.html
+++ b/partners.html
@@ -259,20 +259,20 @@
 
 		 <div class="services-list block-1-3 block-tab-full group">
 			<div class="bgrid service-item animate-this">
-				<a target="_blank" href="http://www.comune.torino.it/">
-					<img class="icon" src="images/partners/citta_torino.jpg" style="width: 250px">
+				<a target="_blank" href="https://www.regione.piemonte.it/web/">
+					<img class="icon" src="images/partners/reg_piemonte.png" style="width: 250px">
 				</a>
 			</div> 
 
 			<div class="bgrid service-item animate-this">
 				<a target="_blank" href="http://www.cittametropolitana.torino.it/cms/index.php">
-					<img class="icon" src="images/partners/cmt.png" style="width: 250px; margin-top: 20px">
+					<img class="icon" src="images/partners/cmt.png" style="width: 250px; margin-top: 70px">
 				</a>
 			</div> 
 
 			<div class="bgrid service-item animate-this">
 				<a target="_blank" href="https://www.cnr.it/en">
-					<img class="icon" src="images/partners/cnr.jpg" style="width: 250px; margin-top: 20px">
+					<img class="icon" src="images/partners/cnr.jpg" style="width: 250px; margin-top: 70px">
 				</a>
 			</div> 
 
@@ -283,8 +283,8 @@
 			</div> 
 
 			<div class="bgrid service-item animate-this">
-				<a target="_blank" href="https://www.cni.it/albo-unico">
-					<img class="icon" src="images/partners/ordine_ing.png" style="width: 250px; margin-top: 20px">
+				<a target="_blank" href="https://www.ording.torino.it/">
+					<img class="icon" src="images/partners/ordine_ing.jpg" style="width: 250px; margin-top: 20px">
 				</a>
 			</div> 
 
